--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,6 @@
 PORT = 8000
 MONGODB_URI = mongodb://0.0.0.0:27017/ecommerce
 JWT_SECRET = "kashdahkfbkabwfiafw12314"
+EMAIL_SECRET = rnatqtweydlakdcd
+EMAIL_NAME = eridev0409@gmail.com
+URL_SERVER = http://localhost:8000
