--- a/Server/package.json
+++ b/Server/package.json
@@ -15,11 +15,13 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
   }
 }
